VZDEV/src/objects/CCPM_webServiceField__mdt.object
<CustomObject>
    <description>The fields required to be updated based on Heroku&apos;s callout after sending a SMS</description>
    <fields>
        <fullName>CCPM_fieldtobeUpdated__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>WebServiceField</label>
    <pluralLabel>WebServiceFields</pluralLabel>
</CustomObject>